--- a/index.css
+++ b/index.css
@@ -174,6 +174,7 @@ body {
 
 table {
     width: 100%;
+	font-size: 14px;
     border-collapse: collapse;
     border-radius: 20px;
     overflow: hidden;
